# ctl2snf

./: CMakeLists.txt  LICENSE  README.md  ctl2snf  formula.txt  readme.md
formulas/: CMakeLists.txt  Nnf.hpp  formula.cpp  formula.hpp
parser/: CMakeLists.txt
parser/include/: Nnf.hpp  Simp.hpp  Tree.hpp  transform.hpp  types.hpp
parser/src/: Nnf.cpp  Simp.cpp  demo.cpp  parser.y  scanner.l  transform.cpp  types.cpp
